--- a/jxyhs-baidu-demo.html
+++ b/jxyhs-baidu-demo.html
@@ -69,7 +69,7 @@
         map.centerAndZoom(point1,16);
         var content1 = 
             "<h4 style='margin:0 0 5px 0;padding:0.2em 0'>进贤养护所</h4>" + 
-            "<img style='float:right;margin:4px' id='imgDemo' src='https://ccq.oss-cn-qingdao.aliyuncs.com/images/jxyhs-min.jpg' width='139' height='104' title='进贤养护所'/>" + 
+            "<img style='float:right;margin:4px' id='imgDemo' src='/jxyhs-min.jpg' width='139' height='104' title='进贤养护所'/>" + 
             "<p style='margin:0;line-height:1.5;font-size:13px'>地址：江西省进贤县沥背陈家</p>" + 
             "</div>";
         var infoWindow = new BMap.InfoWindow(content1);
